--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "axios": "^1.7.7",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
