--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@starknet-react/chains": "^3.0.6",
+    "@starknet-react/core": "^3.4.0",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "axios": "^1.7.7",
     "ethers": "^6.13.4",
